fixing wrap on bottomActionRow in sub-points with images

--- a/less/uiv2.less
+++ b/less/uiv2.less
@@ -1300,7 +1300,7 @@ a:hover .perctSignSmall {
   padding-right: @cardPaddingRight;
 }
 .pointCardPaddingHExtra {
-  padding-right: @cardPaddingRight + 4px;
+  padding-right: @cardPaddingRight + 12px;
 }
 
 
@@ -1564,7 +1564,7 @@ li .iconWithStat {
   display: inline-block;
   width: 100%;
 }
-@imageWidth: 28%;
+@imageWidth: 25%;
 .contentWithImage {
   display: inline-block;
   width: 100% - @imageWidth;
@@ -1597,6 +1597,7 @@ li .iconWithStat {
 
 .sources {
   margin-bottom: 4px;
+  //margin-top: 2px;
 }
 
 .sourceLabel {
@@ -1730,7 +1731,7 @@ a.source {
 }
 
 .relevanceVoteBottomAction {
-  margin-right: 18px;
+  //margin-right: 18px;
 }
 
 .evidenceBlockEmpty .addEvidenceButtonGrp {
